<resources>
    <string name="app_name">饭否</string>

    <string name="tel">手机号</string>
    <string name="pass">密码</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="forget_pass">忘记密码</string>
    <string name="phone">电话号码</string>
    <string name="next_step">下一步</string>
    <string name="pass2">确认密码</string>
    <string name="tip_input">请填写此字段</string>
    <string name="phone_11">请填写11位电话号码</string>
    <string name="success_send_code">验证码发送成功</string>
    <string name="send_to_phone">已发送验证码到以下手机号</string>
    <string name="register_success">注册成功</string>
    <string name="login_sucess">登陆成功</string>
    <string name="send_code">发送验证码</string>
    <string name="check">验证</string>
    <string name="code_input">请输入验证码</string>
    <string name="pass_input">请输入密码</string>
    <string name="pass1pass2">密码输入不相同</string>
    <string name="phone_is_alive">该手机号码已经注册</string>
    <string name="phone_not_alive">该手机号码未注册</string>
    <string name="pass_revise_succcess">密码修改成功</string>
    <string name="pass_revise">修改密码</string>
    <string name="internet_is_gone">网络异常</string>
    <string name="to">前往</string>

    <string name="title_Index">饭否</string>
    <string name="title_News">动态</string>
    <string name="title_Info">我的</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="focus_text">我的关注</string>
    <string name="fans_text">我的粉丝</string>

    <string name="mess">我的消息</string>
    <string name="comment">我的评论</string>
    <string name="post">我的帖子</string>
    <string name="coll">我的收藏</string>
    <string name="praise">我的赞</string>

    <string name="admin_info">个人信息</string>
    <string name="head">头像</string>
    <string name="logout">退出登录</string>
    <string name="revise_info">修改信息成功</string>
    <string name="zero">0</string>

    <string name="old_pass">请输入旧密码</string>
    <string name="new_pass">请输入新密码</string>
    <string name="pass_not_correct">密码不正确</string>
    <string name="level_tip">每天登录饭否、发帖、留言、浏览消息都能够提高成长值哦。</string>

    <string name="failed_to_open">打开图片失败</string>
    <string name="upload_pic_success">上传图片成功</string>
    <string name="lyric">不敢回看 左顾右盼不自然的暗自喜欢 偷偷搭讪总没完地坐立难安 试探说晚安 多空泛又心酸
        低头呢喃 对你的偏爱太过于明目张胆 在原地打转的小丑伤心不断 空空留遗憾 多难堪又为难 释然 慵懒 尽欢 </string>

    <string name="shtc">美食诱惑</string>
    <string name="xxhd">今日热门</string>
    <string name="qzzx">每日推荐</string>
    <string name="qbbk">全部板块</string>

    <string name="focus">关注</string>
    <string name="text">约起吃饭…</string>
    <string name="topic">去哪里？</string>
    <string name="content">正文</string>
    <string name="addcomment">添加评论…</string>


    <string name="commment">评论:</string>
    <string name="mpost">帖子:</string>


    <string name="title_activity_user">他的</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>
