<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.twinkle.cdnubbs.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            style="@style/login_text"
            android:id="@+id/tvw_login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/register" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/bbs"
            android:contentDescription="@string/app_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ett_login_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/tel_jwgl"
                android:inputType="number" />

            <EditText
                android:id="@+id/ett_login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/pass"
                android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tvw_login_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:textColor="#4096a9"
            android:text="@string/forget_pass" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
