<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context="com.twinkle.cdnubbs.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbr_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/register"
        />

    <TextView
        android:id="@+id/tvw_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/smssdk_write_mobile_phone"
        android:textColor="#131111"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llt_register1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">


        <EditText
            android:id="@+id/ett_register_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="13"
            android:gravity="center"
            android:hint="@string/phone"
            android:inputType="number"
            tools:text="12345678901" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llt_register2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvw_register_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:gravity="center"
            android:textColor="#131111"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="1234567890" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center|top"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ett_register_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/phone"
                android:inputType="number"
                tools:text="12345678901" />

            <Button
                android:id="@+id/btn_register_code"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape"
                tools:text="60s" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llt_register3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">


        <EditText
            android:id="@+id/ett_register_pass1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="13"
            android:gravity="center"
            android:hint="@string/pass"
            android:inputType="number"
            tools:text="12345678901" />

        <EditText
            android:id="@+id/ett_register_pass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="13"
            android:gravity="center"
            android:hint="@string/pass2"
            android:inputType="number"
            tools:text="12345678901" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_register_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape"
        android:ems="13"
        android:text="@string/next_step" />

</LinearLayout>
