<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:padding="10dp">

            <com.loopj.android.image.SmartImageView
                android:id="@+id/siv_lv_comment_header"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/head" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_lv_comment_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#060606"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="笔法科技" />

                <TextView
                    android:id="@+id/tv_lv_comment_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#060606"
                    android:textSize="12sp"
                    tools:text="1月18日发布" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:textColor="#e42c2c"
                android:text="@string/commment"
                />

            <TextView
                android:layout_marginStart="40dp"
                android:id="@+id/tv_lv_comment_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                tools:text="@string/lyric" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:textColor="#e42c2c"
                android:text="@string/mpost" />

            <TextView
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_marginStart="40dp"
                android:id="@+id/tv_lv_comment_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                tools:text="@string/lyric" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/crop__button_bar" />

</LinearLayout>
